resume from question list lol

--- a/index.html
+++ b/index.html
@@ -1,67 +1,114 @@
-<h2 id="group-a">Group A</h2>
-<ol>
-<li>Cell membrane with diagram.</li>
-<li>Name the membranous and non-membranous organelles with their functions. Name organelles engaged in protein synthesis.</li>
-<li>Enumerate cytoskeletal components of cells with their site of distribution and functions. </li>
-<li>Give structure and functions of mitochondria, endoplasmic reticulum and Golgi apparatus.</li>
-<li>Mention criteria for basic tissues. Classify surface epithelia with example. Draw and label the pseudostratified ciliated collumnar epithelium.</li>
-<li>Classify muscles with example. Mention differences among them. Draw and label light microscope structure of different types of muscles. Rigor mortis.</li>
-<li>Classify skeletal muscles according to arrangement of fibres. Mention differences between red and white fibres.</li>
-<li>Basal lamina.</li>
-<li>Connective tissue without previous year&#39;s questions.</li>
-<li>Define bones and classify with examples.</li>
-<li>What is fracture?</li>
-<li>What is motor unit?</li>
-<li>Cells of nerve tissue. Classify Neuroglia with functions.</li>
-<li>Classify blood vessels with examples</li>
-<li>What is chromosome. Mention composition and structures. (Creation 32)</li>
-<li>Mentioned common numerical disorders of chromosome (aneuploidy and polyploidy).</li>
-<li>What is gene? Classify. (Ref 144)</li>
-<li>Mendel&#39;s Law.</li>
-<li>What is prime mover and antagonist?</li>
-<li>Draw growing long bone.</li>
-<li>Clinical importance of metaphysis.</li>
-<li>What is implantation?</li>
-<li>What is placental period?</li>
-<li>What is embryonic period?</li>
-<li>Mechanism of implantation.</li>
-<li>Derivatives of ectoderm.</li>
-<li>What is gastrulation?</li>
-<li>Derivative of mesoderm.</li>
-<li>Histological structures of lymph node, and thymus.</li>
-<li>Kleinfelter’s Syndrome, Down’s Syndrome, Turner’s Syndrome. (Creation 319)</li>
-<li>Adipose tissue.</li>
-<li>Neural crest</li>
-<li>Draw and label structures of DNA.</li>
-</ol>
-<hr>
-<h2 id="group-b">Group B</h2>
-<ol>
-<li>Middle ear cavity infection is more common in children. Why?</li>
-<li>Steps of dissection of posterior triangle.</li>
-<li>Sensory supply of face on development background.</li>
-<li>How is cleft lip formed?</li>
-<li>Formation and circulation of aqueous humour? </li>
-<li>Bell&#39;s Palsy</li>
-<li>Cataract.</li>
-<li>Bleeding during 5th or 6th month of pregnancy (internal os pregnancy; placenta praevia)</li>
-<li>CSF </li>
-<li>Circle of Willis</li>
-<li>Refractive errors and correction.</li>
-<li>Draw and label visual pathway.</li>
-<li>Layers of retina.</li>
-<li>Pupillary light reflex</li>
-<li>Accommodation reflex.</li>
-<li>Consensual reflex pathway.</li>
-<li>Formation of brainstem.</li>
-<li>Attachments of cranial nerves.</li>
-<li>Parts and nerve supply of pharynx.</li>
-<li>Histology of parotid gland.</li>
-<li>Difference between serous acini and mucous acini</li>
-<li>Where does parotid duct open?</li>
-<li>What are dural sinuses?</li>
-<li>Muscles of mastication.</li>
-<li>Formation of hard palate</li>
-<li>Soft Palate</li>
-<li>Derivatives of Pharyngeal Pouch</li>
-</ol>
+<!DOCTYPE html>
+<html lang="en" data-theme="light">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Aryesh Aditya - Online Resume</title>
+  <style>
+    :root {
+      --bg: #f8f9fa;
+      --text: #222;
+      --link: #007acc;
+      --section: #2c3e50;
+    }
+
+    [data-theme="dark"] {
+      --bg: #121212;
+      --text: #ddd;
+      --link: #4ea1f3;
+      --section: #e0e0e0;
+    }
+
+    body {
+      font-family: Arial, sans-serif;
+      max-width: 800px;
+      margin: 2rem auto;
+      padding: 1rem;
+      line-height: 1.6;
+      background-color: var(--bg);
+      color: var(--text);
+      transition: background-color 0.3s, color 0.3s;
+    }
+
+    h1, h2 {
+      color: var(--section);
+    }
+
+    h1 {
+      border-bottom: 2px solid #ccc;
+      padding-bottom: 0.2rem;
+    }
+
+    .section {
+      margin-top: 2rem;
+    }
+
+    .contact {
+      font-size: 0.9rem;
+      color: var(--text);
+    }
+
+    a {
+      color: var(--link);
+      text-decoration: none;
+    }
+
+    .toggle {
+      float: right;
+      margin-top: -3rem;
+      font-size: 0.9rem;
+    }
+  </style>
+</head>
+<body>
+  <div class="toggle">
+    <label>
+      <input type="checkbox" id="darkModeToggle" />
+      🌙 Dark Mode
+    </label>
+  </div>
+
+  <h1>Aryesh Aditya</h1>
+  <p class="contact">
+    📍 Durgapur, India · 📧 <a href="mailto:you@example.com">aryeshaditya913206@gmail.com</a> · 📞 +918900570991 · 
+    <a href="https://github.com/LucienReyes">GitHub</a>
+  </p>
+
+  <div class="section">
+    <h2>🎓 Education</h2>
+    <p><strong>TMSS Medical College</strong> – FMGE Candidate<br/>Graduated: 2025</p>
+  </div>
+
+  <div class="section">
+    <h2>🩺 Clinical Experience</h2>
+    <p><strong>Hospital Name</strong> – Student<br/></p>
+    <ul>
+      <li>Worked on rotations in internal medicine, pediatrics, etc.</li>
+      <li>Participated in patient care and interdisciplinary rounds</li>
+    </ul>
+  </div>
+
+  <div class="section">
+    <h2>🛠 Skills</h2>
+    <ul>
+      <li>Fluent in English and Spanish</li>
+      <li>Basic knowledge of statistical analysis (SPSS, R)</li>
+      <li>Comfortable in high-pressure clinical environments</li>
+    </ul>
+  </div>
+
+  <div class="section">
+    <h2>💬 References</h2>
+    <p>Available upon request</p>
+  </div>
+
+  <script>
+    const toggle = document.getElementById("darkModeToggle");
+    const root = document.documentElement;
+
+    toggle.addEventListener("change", function () {
+      root.setAttribute("data-theme", this.checked ? "dark" : "light");
+    });
+  </script>
+</body>
+</html>
