--- a/index.html
+++ b/index.html
@@ -76,21 +76,18 @@
 
   <div class="section">
     <h2>🎓 Education</h2>
-<<<<<<< HEAD
-    <p><strong>TMSS Medical College</strong> – FMGE Candidate<br/>Graduated: 2025</p>
+    <p><strong>School of Wizardry and Druidry</strong> – Druidry Graduate with Wizadry Minor<br/>Graduated: 2025</p>
   </div>
 
   <div class="section">
-    <h2>🩺 Clinical Experience</h2>
-    <p><strong>Hospital Name</strong> – Student<br/></p>
-=======
-    <p><strong>School of Wizardry and Druidry</strong> – Wizardry and Druidry<br/>Graduated: 2000</p>
+    <h2>🩺 Magical Experience</h2>
+    <p><strong>Magick and Alchemy</strong> – Graduate<br/></p>
+   <p><strong>School of Wizardry and Druidry</strong> – Wizardry and Druidry<br/>Graduated: 2000</p>
   </div>
 
   <div class="section">
     <h2>🩺 Magical Experience</h2>
     <p><strong>School of Wizardry and Druidry</strong> – Student<br/></p>
->>>>>>> f403a21 (update resume again)
     <ul>
       <li>Worked on all fields of magic including alchemy</li>
       <li>Participated in practical exorcisms and the like</li>
@@ -100,14 +97,12 @@
   <div class="section">
     <h2>🛠 Skills</h2>
     <ul>
-<<<<<<< HEAD
-      <li>Fluent in English and Spanish</li>
-      <li>Basic knowledge of statistical analysis (SPSS, R)</li>
-      <li>Comfortable in high-pressure clinical environments</li>
-=======
+      <li>Fluent in English and various ancient languages</li>
+      <li>Basic knowledge of alchemy (SPSS, R)</li>
+      <li>Comfortable in high-pressure magical environments</li>
+
       <li>Fluent in English and various ancient languages</li>
        <li>Comfortable in high-pressure situations, like childbirth</li>
->>>>>>> f403a21 (update resume again)
     </ul>
   </div>
 
