--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </label>
   </div>
 
-  <h1>Aryesh Aditya</h1>
+  <h1>Lucien Reyes</h1>
   <p class="contact">
     📍 Internation · 📧 <a href="mailto:you@example.com">yohohoandabottleofrum@protonmail.com</a> · 📞 666 · 
     <a href="https://github.com/LucienReyes">GitHub</a>
