--- a/index.html
+++ b/index.html
@@ -70,27 +70,27 @@
 
   <h1>Lucien Reyes</h1>
   <p class="contact">
-    📍 Internation · 📧 <a href="mailto:you@example.com">yohohoandabottleofrum@protonmail.com</a> · 📞 666 · 
+    📍 International · 📧 <a href="mailto:you@example.com">yohohoandabottleofrum@protonmail.com</a> · 📞 0987654321
     <a href="https://github.com/LucienReyes">GitHub</a>
   </p>
 
   <div class="section">
     <h2>🎓 Education</h2>
-    <p><strong>School of Wizardry and Druidry</strong> – Druidry Graduate with Wizadry Minor<br/>Graduated: 2025</p>
+    <p><strong>School of Wizardry and Druidry</strong> – Graduate<br/>Graduated: 2022</p>
   </div>
 
   <div class="section">
     <h2>🩺 Magical Experience</h2>
-    <p><strong>Magick and Alchemy</strong> – Graduate<br/></p>
+    <p><strong>Magic and Alchemy</strong> – Master<br/></p>
    <p><strong>School of Wizardry and Druidry</strong> – Wizardry and Druidry<br/>Graduated: 2000</p>
   </div>
 
   <div class="section">
     <h2>🩺 Magical Experience</h2>
-    <p><strong>School of Wizardry and Druidry</strong> – Student<br/></p>
+    <p><strong>Alchemy, Wizardry, Druidry</strong> – Expert<br/></p>
     <ul>
-      <li>Worked on all fields of magic including alchemy</li>
-      <li>Participated in practical exorcisms and the like</li>
+      <li>Worked on all fields of magic</li>
+      <li>Participated in practical transformations and the like</li>
     </ul>
   </div>
 
@@ -98,8 +98,8 @@
     <h2>🛠 Skills</h2>
     <ul>
       <li>Fluent in English and various ancient languages</li>
-      <li>Basic knowledge of alchemy (SPSS, R)</li>
-      <li>Comfortable in high-pressure magical environments</li>
+      <li>Basic knowledge of everything (SPSS, R)</li>
+      <li>Comfortable in high-pressure environments</li>
     </ul>
   </div>
 
